# hermes-lcm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  bypass.py  codex_routing.py  command.py  compaction.py  config.py  dag.py  db_bootstrap.py  engine.py  engine_registry.py  escalation.py  externalize.py  extraction.py  ingest_protection.py  lifecycle_state.py  message_analysis.py  message_content.py  plugin.yaml  presets.py  pyproject.toml  reset_state.py  rollup_builder.py  rollup_periods.py  schemas.py  sqlite_util.py  store.py  tokens.py  tools.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
benchmarking/: fixtures.py  policies.py  replay.py  report.py  steady_state.py  stress.py  types.py
benchmarks/: README.md
benchmarks/fixtures/: scrubbed_operator_chatter_repeated_compaction.json  (+1 more)
docs/: operator-guide.md  packaging.md
scripts/: import_lossless_claw.py  lcm_steady_state_bench.py  lcm_stress_check.py
tests/: conftest.py  test_benchmarking_fixtures.py  test_benchmarking_replay.py  test_benchmarking_report.py  test_benchmarking_steady_state.py  test_benchmarking_types.py  test_compression_boundary.py  test_crash_safe_wal.py  test_db_bootstrap_fts.py  test_host_capability.py  test_import_lossless_claw.py  test_ingest_protection.py  test_lcm_command.py  test_lcm_core.py  test_lcm_engine.py  test_lcm_preset_command.py  test_lcm_recent.py  test_packaging_install.py  test_path_containment.py  test_path_resolution.py  test_path_security.py  test_rollup_builder.py  test_stress_release_check.py  test_tool_contracts.py
(+2 files in other folders)
